--- a/styles/style.css
+++ b/styles/style.css
@@ -33,45 +33,45 @@ body{
     color: var(--cor-terciaria);
     text-decoration: none;
 }
-.apresentacao{
+.blocoEsquerda{
     padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 82px;
 }
-.apresentacao__conteudo{
+.blocoEsquerda__conteudo{
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
-.apresentacao__conteudo__titulo{
+.blocoEsquerda__conteudo__titulo{
     font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 .titulo-destaque{
     color: var(--cor-terciaria);
 }
-.apresentacao__conteudo__texto{
+.blocoEsquerda__conteudo__texto{
     font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 
-.apresentacao__links{
+.blocoEsquerda__links{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     gap: 32px;
 }
-.apresentacao__links__subtitulo{
+.blocoEsquerda__links__subtitulo{
     font-family: var(--fonte-primaria);
     font-weight: 400;
     font-size: 1.5rem;
 }
-.apresentacao__links__navegacao{
+.blocoEsquerda__links__navegacao{
     display: flex;
     justify-content: center;
     gap: 16px;
@@ -86,10 +86,10 @@ body{
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
 }
-.apresentacao__links__link:hover{
+.blocoEsquerda__links__link:hover{
     background-color: var(--cor-hover);
 }
-.apresentacao__imagem{
+.blocoEsquerda__imagem{
     width: 50%;
 }
 .rodape{
@@ -109,11 +109,11 @@ body{
     .cabecalho__menu{
         justify-content: center;
     }
-    .apresentacao{
+    .blocoEsquerda{
         flex-direction: column-reverse;
         padding: 5%;
     }
-    .apresentacao__conteudo{
+    .blocoEsquerda__conteudo{
         width: auto;
     }
 }
